# hyperwall

./: .gitignore  CMakeLists.txt  README.md  flake.nix  receiver.py  requirements.txt  sender.py
.github/workflows/: build-test.yml  build.yml
include/: ArgparseSettings.hpp  FFmpeg.hpp  Hyperframe.hpp  Hyperwall.hpp  HyperwallArguments.hpp  Mode.hpp  Settings.hpp  Socket.hpp  SourceExecutor.hpp  Utils.hpp  ffmpeg.hpp  sender.hpp
include/Sources/: FileSource.hpp  TCPSource.hpp  VideoSource.hpp  WebcamSource.hpp
include/Web/: Server.hpp
scripts/: ffplay-single.sh  tmux-ffplay.sh  tmux-receiver.sh
src/: FFMPEG.cpp  FFmpeg.cpp  FileSource.cpp  Hyperwall.cpp  Receiver.cpp  Sender.cpp  SenderWeb.cpp  Server.cpp  Sources.cpp  sender.cpp
src/impl/: FFmpeg.cpp  Hyperframe.cpp  Hyperwall.cpp  Socket.cpp  SourceExecutor.cpp  Sources.cpp
src/test/: ffmpeg.cpp  hyperwall.cpp  settings.cpp  utils.cpp
